@@ -60,7 +60,7 @@ namespace OpenBabel
   
   //! \class OBFFParameter forcefield.h <openbabel/forcefield.h>
   //! \brief Internal class for OBForceField to hold forcefield parameters
-  class OBFPRT OBFFParameter {
+  class OBFPTR OBFFParameter {
   public:
     //! Used to store integer atom types
     int         a, b, c, d;
@@ -122,7 +122,7 @@ namespace OpenBabel
   // specific class introductions in forcefieldYYYY.cpp (for YYYY calculations)
   //! \class OBFFCalculation forcefield.h <openbabel/forcefield.h>
   //! \brief Internal class for OBForceField to hold energy and gradient calculations on specific force fields
-  class OBFPRT OBFFCalculation
+  class OBFPTR OBFFCalculation
   {
     public:
       //! Used to store the energy for this OBFFCalculation
@@ -180,7 +180,7 @@ namespace OpenBabel
 
   // Class OBForceField
   // class introduction in forcefield.cpp
-  class OBFPRT  OBForceField : public OBPlugin
+  class OBFPTR  OBForceField : public OBPlugin
   {
   
   MAKE_PLUGIN(OBForceField)
